@@ -134,7 +134,6 @@ Digest::MD5                                    = 0
 Dist::Zilla::Plugin::Meta::Dynamic::Config     = 0
 Dist::Zilla::Plugin::PPPort                    = 0
 EV                                             = 0
-File::IgnoreReadonly                           = 0
 File::Listing                                  = 0
 File::Touch                                    = 0
 JSON                                           = 0
