@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Remove File::IgnoreReadonly
 
 1.82      2016-01-06 07:38:17 -0500
   - Updated my dists to latest
